# mcp-server-couchbase

./: .gitignore  CONTRIBUTING.md  DOCKER.md  Dockerfile  README.md  RELEASE.md  pyproject.toml  server.json
.github/workflows/: accuracy.yml  alert-on-pr.yml  docker.yml  release.yml  test.yml  test_release.yml  update-mcp-registry.yml
scripts/: setup_test_data.py
src/: mcp_server.py
src/cb_mcp/: auth.py  tool_registration.py
src/cb_mcp/core/: contracts.py
src/cb_mcp/tools/: __init__.py  bucket_admin.py  collections_admin.py  diagnostics.py  fts_admin.py  index.py  index_admin.py  kv.py  query.py  server.py  xdcr_admin.py
src/cb_mcp/utils/: __init__.py  bucket_admin_rest.py  cli.py  connection.py  constants.py  context.py  diagnostics_rest.py  environment.py  fts_rest.py  index_ddl.py  index_settings.py  logging.py  scope_enforcement.py  xdcr_rest.py
tests/: README.md  test_auth.py
tests/accuracy/: conftest.py
tests/accuracy/result_validation/: test_query.py
tests/integration/: conftest.py  test_logging_integration.py
tests/unit/: test_auth.py  test_bucket_admin.py  test_cli_options.py  test_collections_admin.py  test_configure_logging.py  test_diagnostics.py  test_fts_admin.py  test_index_admin_tools_unit.py  test_index_ddl_unit.py  test_index_settings_unit.py  test_log_cli_validators.py  test_log_environment_info.py  test_log_parsers.py  test_query_tools_unit.py  test_read_only_mode.py  test_redacted_settings.py  test_server_configuration_status_tool.py  test_tool_registration.py  test_utils.py  test_xdcr_admin.py
